completed venue controller